# GECore

./: .gitignore  .gitmodules  CMakeLists.txt  ClassDiagramm  PXXTClassDiagram.drawio  notes.org
assets/: shader.glsl.frag  shader.glsl.vert  texture.glsl.frag  texture.glsl.vert
include/GECore/: GECore.h
include/GECore/Core/: Application.h  BasicLayer.h  Color.h  Core.h  EntryPoint.h  Layer.h  Logger.h  OrtographicCameraController.h  Time.h  Window.h
include/GECore/Core/Events/: Close.h  CursorMove.h  KeyboardPress.h  LayerEvent.h  MousePress.h  MouseScroll.h  WindowResize.h
include/GECore/Core/Input/: GLFWInput.h  Input.h  Keycode.h
include/GECore/Platform/OpenGL/: Context.h
include/GECore/Primitives/: Quad.h  Vertex.h
include/GECore/Renderer/: Buffer.h  FrameBuffer.h  GraphicContext.h  IndexBuffer.h  OrtographicCamera.h  RenderCommand.h  Renderer.h  Renderer2D.h  Shader.h  SubTexture2D.h  Texture2D.h  VertexArray.h
src/Core/: Application.cpp  Layer.cpp  Logger.cpp  OrtographicCameraController.cpp  Time.cpp  Window.cpp
src/Core/Input/: GLFWInput.cpp  Input.cpp
src/Platform/OpenGL/: Context.cpp  Context.cpp~
src/Primitives/: Quad.cpp
src/Renderer/: Buffer.cpp  FrameBuffer.cpp  IndexBuffer.cpp  OrtographicCamera.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  SubTexture2D.cpp  Texture2D.cpp  VertexArray.cpp
tests/2DRenderer/: CMakeLists.txt
tests/2DRenderer/src/: 2DRenderer.cpp  Layer.cpp  Layer.h
tests/BatchRendering/: CMakeLists.txt
tests/BatchRendering/assets/: shader.glsl.frag
tests/BatchRendering/src/: MyLayer.h
tests/Triangle/: CMakeLists.txt  CMakeLists.txt~
tests/Triangle/assets/: shader.glsl.vert  shader.glsl.vert~  white.glsl.frag  white.glsl.frag~
tests/Triangle/src/: Main.cpp  MyLayer.h
